Refactored ConfigPanel